third_party/move/move-compiler-v2/tests/lambda/storable/registry_errors.exp

Diagnostics:
error: unsupported language construct
  ┌─ tests/lambda/storable/registry_errors.move:9:22
  │
9 │         f: |u64| u64 with store,
  │                      ^^^^^^^^^^ Move 2.2 language construct is not enabled: Ability constraints on function types

error: unsupported language construct
   ┌─ tests/lambda/storable/registry_errors.move:28:80
   │
28 │     fun replace_or_add_function(v: &mut vector<Function>, k: u64, f: |u64| u64 with store): Option<Function> {
   │                                                                                ^^^^^^^^^^ Move 2.2 language construct is not enabled: Ability constraints on function types

error: unsupported language construct
   ┌─ tests/lambda/storable/registry_errors.move:42:47
   │
42 │     fun register(owner: &signer, f: |u64| u64 with store, k: u64) acquires Registry {
   │                                               ^^^^^^^^^^ Move 2.2 language construct is not enabled: Ability constraints on function types

error: unsupported language construct
   ┌─ tests/lambda/storable/registry_errors.move:91:41
   │
91 │     fun multiply_by_x(x: u64): |u64|u64 with store {
   │                                         ^^^^^^^^^^ Move 2.2 language construct is not enabled: Ability constraints on function types

error: unsupported language construct
   ┌─ tests/lambda/storable/registry_errors.move:95:42
   │
95 │     fun multiply_by_x2(x: u64): |u64|u64 with store {
   │                                          ^^^^^^^^^^ Move 2.2 language construct is not enabled: Ability constraints on function types

error: unsupported language construct
   ┌─ tests/lambda/storable/registry_errors.move:96:9
   │
96 │         move |y| multiply(x, y)
   │         ^^^^ Move 2.2 language construct is not enabled: Modifier on lambda expression
